--- a/i3/config
+++ b/i3/config
@@ -169,8 +169,9 @@ bar {
         #status_command i3status
 	font pango:Inconsolata Regular 10
 	position top
-	tray_output primary
+	tray_output primary	
 	status_command i3blocks -c ~/.config/i3/i3blocks.conf
+	#status_command ~/git/sw/bumblebee-status/bumblebee-status -m indicator progress nic disk cpu memory battery brightness pasink pasource bluetooth date time sensors weather -a indicator -p nic.format="{ip} {ssid}" disk.path="/home/hd" disk.format="{percent:.02f}%" memory.format="{used}/{total}" date.format="%-m/%-d/%y" time.format="%H:%M" -t gruvbox-powerline
 	colors {
 		separator #969896
 		background #1d1f21
@@ -255,6 +256,9 @@ mode $intel_displayMode {
 # Hide Title Bar
 for_window [class="^.*"] border pixel 1
 new_window 1pixel
+
+# Run applications
+bindsym $mod+Shift+n exec --no-startup-id nemo
 
 
 # ---------------------------------------------------------------------------------------------------
