--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -71,6 +71,9 @@ bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 1 scroll-d
 
 # Use Vim keybindings in copy mode.
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+# bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Renumber windows when a window is closed.
 set -g renumber-windows on
