visidata: index start from 1

--- a/visidata/.visidatarc
+++ b/visidata/.visidatarc
@@ -1,2 +1,9 @@
+@Sheet.property
+def cursorRowIndex1(sheet):
+    return sheet.cursorRowIndex+1
+@Sheet.property
+def cursorVisibleColIndex1(sheet):
+    return sheet.cursorVisibleColIndex+1
+
 options.clipboard_copy_cmd = 'xclip -selection primary'
-options.disp_rstatus_fmt = ' R:{sheet.cursorRowIndex}/{sheet.nRows}[{sheet.nSelectedRows}] C:{sheet.cursorVisibleColIndex}/{sheet.nVisibleCols} {sheet.rowtype} '
+options.disp_rstatus_fmt = ' R:{sheet.cursorRowIndex1}/{sheet.nRows}[{sheet.nSelectedRows}] C:{sheet.cursorVisibleColIndex1}/{sheet.nVisibleCols}'
