update zsh, gtk, visidata

--- a/visidata/.visidatarc
+++ b/visidata/.visidatarc
@@ -8,3 +8,5 @@ def cursorVisibleColIndex1(sheet):
 options.use_default_colors = True
 options.clipboard_copy_cmd = 'xclip -selection primary'
 options.disp_rstatus_fmt = ' R:{sheet.cursorRowIndex1}/{sheet.nRows}[{sheet.nSelectedRows}] C:{sheet.cursorVisibleColIndex1}/{sheet.nVisibleCols}'
+
+options.color_default=""
