--- a/gtk/gtk-3.0/settings.ini
+++ b/gtk/gtk-3.0/settings.ini
@@ -1,6 +1,9 @@
 [Settings]
 gtk-theme-name=Nextwaita-dark-3.0
+gtk-icon-theme-name=Adwaita
 gtk-font-name=Noto Sans 9
+gtk-cursor-theme-name=Adwaita
+gtk-cursor-theme-size=16
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
 gtk-button-images=0
