doom, dunst, tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -81,3 +81,6 @@ set -g renumber-windows on
 # Turn on activity monitors.
 set -g monitor-activity on
 set -g visual-activity off
+
+# Setting TERM to "st-256color" for coloring
+set -g default-terminal "st-256color"
