--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -83,4 +83,7 @@ set -g monitor-activity on
 set -g visual-activity off
 
 # Setting TERM to "st-256color" for coloring
-set -g default-terminal "st-256color"
+set -g default-terminal "tmux-256color"
+
+# focus-events
+set-option -g focus-events on
