--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -83,6 +83,7 @@ set -g monitor-activity on
 set -g visual-activity off
 
 # Setting TERM to "st-256color" for coloring
+set -ga terminal-overrides ",xterm-256color:RGB"
 set -g default-terminal "tmux-256color"
 
 # focus-events
