--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,4 +1,16 @@
 #################################
+#          Animations           #
+#################################
+# requires https://github.com/jonaburg/picom
+# (These are also the default values)
+transition-length = 0
+transition-pow-x = 0.0
+transition-pow-y = 0.0
+transition-pow-w = 0.0
+transition-pow-h = 0.0
+size-transition = false
+
+#################################
 #             Shadows           #
 #################################
 
@@ -90,8 +102,8 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-# fading = false
-fading = true
+fading = false
+# fading = true
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
