--- a/gtk/gtk-3.0/settings.ini
+++ b/gtk/gtk-3.0/settings.ini
@@ -1,9 +1,9 @@
 [Settings]
-gtk-theme-name=Nextwaita-dark-3.0
-gtk-icon-theme-name=Adwaita
+gtk-theme-name=Sweet-Dark-v40
+gtk-icon-theme-name=Sweet-Purple
 gtk-font-name=Noto Sans 9
 gtk-cursor-theme-name=Adwaita
-gtk-cursor-theme-size=16
+gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
 gtk-button-images=0
@@ -13,4 +13,4 @@ gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
-gtk-xft-rgba=rgb
+gtk-xft-rgba=vrgb
