--- a/visidata/.visidatarc
+++ b/visidata/.visidatarc
@@ -11,10 +11,10 @@ options.disp_rstatus_fmt = ' R:{sheet.cursorRowIndex1}/{sheet.nRows}[{sheet.nSel
 
 options.disp_menu=False
 
-options.color_default=""
-options.color_keystrokes="black"
-options.color_active_status="black"
-options.color_status="black"
-options.color_menu="black"
-options.color_menu_active="226 yellow"
-options.color_menu_help="black italic"
+#options.color_default=""
+#options.color_keystrokes="black"
+#options.color_active_status="black"
+#options.color_status="black"
+#options.color_menu="black"
+#options.color_menu_active="226 yellow"
+#options.color_menu_help="black italic"
