--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,7 +54,7 @@ set-window-option -g window-status-format " #[fg=#{?window_bell_flag,colour235,c
 
 
 # Reload tmux config with <prefix>-r.
-bind-key r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+bind-key r source-file ~/.config/tmux/tmux.conf \; display '~/.config/tmux/tmux.conf sourced'
 
 # Set scroll history to 100,000 lines.
 set-option -g history-limit 100000
@@ -88,3 +88,17 @@ set -g default-terminal "tmux-256color"
 
 # focus-events
 set-option -g focus-events on
+
+
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-logging'
+# set -g @plugin 'ChanderG/tmux-notify'
+# set -g @plugin 'tmux-plugins/tmux-pain-control'
+# set -g @plugin 'tmux-plugins/tmux-urlview'
+
+# set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
+
+# set -g status-interval 15
+
+# run '~/.config/tmux/plugins/tpm/tpm'
